# shapes-opengl

./: .gitmodules  CMakeLists.txt  EBO.h  README.md  Shader.h  Shape.h  Shapes.vcxproj.filters  Texture.h  VBO.h  default.frag  default.vert  flat.frag  glad.c
Libraries/lib/: glfw3.lib
src/: CMakeLists.txt  EBO.hpp  MatrixStack.hpp  Shader.cpp  Shader.hpp  Shape.hpp  ShapeMesh.cpp  ShapeMesh.hpp  Shapes.sln  Shapes.vcxproj  Texture.cpp  Texture.hpp  VAO.hpp  VBO.hpp  flat.vert  main.cpp  shapes_config.hpp.in
src/demos/: polar.cpp  sample.cpp
src/shaders/: default.frag  default.vert  flat.frag  flat.vert
